<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/flexo_bold"
            android:gravity="center"
            android:text="@string/msgPresentation"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/txtNameStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/flexo_demi"
            android:text="@string/nameStudent"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nameStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/flexo_regular"
            android:text="Karen Alexandra Montaño Navarro"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/flexo_demi"
            android:text="@string/codeStudent"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/codeStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/flexo_regular"
            android:text="191928"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtNameSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/flexo_demi"
            android:text="@string/nameSubject"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/nameSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/flexo_regular"
            android:text="Tópicos Avanzados en Ingeniería"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>