<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/flexo_bold"
                android:gravity="center"
                android:text="@string/msgAddCharacter"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/txtNameCharacter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/flexo_regular"
                android:text="@string/nameCharacter"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/nameCharacter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/roud_background"
                android:fontFamily="@font/flexo_regular"
                android:hint="@string/enterNameCharacter"
                android:inputType="text"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/flexo_regular"
                android:text="@string/descriptionCharacter"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/descriptionCharacter"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/roud_background"
                android:fontFamily="@font/flexo_regular"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/character_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/flexo_regular"
                android:text="Selecciona el tipo de personajes"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/characterTypeMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/flexo_bold"
                android:text="Principal"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/characterTypeSecondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/flexo_bold"
                android:text="Secundario"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/characterTypeExtra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/flexo_bold"
                android:text="Extra"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/flexo_regular"
                android:text="Selecciona una imagen"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/selectImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:src="@drawable/upload"
                android:text="Seleccionar Imagen"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/blueBackground"
                android:text="GUARDAR"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>